objects/HealthCloudGA__CardView_Dropdown__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>HealthCloudGA__CategoryLabel__c</fullName>
        <description>Custom Label for Category.</description>
        <inlineHelpText>If your label has a namespace prefix, use Label_Namespace.Label_Name. Otherwise, use c.Label_Name.</inlineHelpText>
        <label>Category Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Category__c</fullName>
        <label>Category Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DefaultSubtab__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Checked, the visual force page will be loaded as a subtab in console.</description>
        <label>Default Subtab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Param_String__c</fullName>
        <label>URL Parameter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Rec_Open_Type__c</fullName>
        <label>Tab Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Sub_Category__c</fullName>
        <label>Subcategory Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SubcategoryLabel__c</fullName>
        <inlineHelpText>If your label has a namespace prefix, use Label_Namespace.Label_Name. Otherwise, use c.Label_Name.</inlineHelpText>
        <label>Subcategory Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SubtabSortOrder__c</fullName>
        <label>Subtab Sort Order</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Type__c</fullName>
        <label>Page Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Url__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Card View Dropdown</label>
</CustomObject>